# lmdiff

./: .gitignore  CHANGELOG.md  CLAUDE.md  LESSONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/internal/: v040_cutover_audit.md  v041_audit_4variant_check.py  v041_audit_analysis.py  v041_audit_pdn_AB_check.py  v041_validity_design.md
docs/methodology/: normalization.md
docs/migration/: v02-to-v03.md  v040-to-v041.md
examples/: family_geometry_extended.json  family_geometry_partial.json  gpt2_vs_distilgpt2.py
lmdiff/: __init__.py  _api.py  _config.py  _engine.py  _findings.py  _pipeline.py  _progress.py  _validity.py  cli.py  config.py  diff.py  engine.py  geometry.py  tokenizer_utils.py
lmdiff/engines/: __init__.py  minimal.py
lmdiff/experiments/: __init__.py  family.py
lmdiff/metrics/: base.py
lmdiff/metrics/output/: _degeneracy.py  _slicing.py  behavioral_distance.py  token_entropy.py  token_kl.py
lmdiff/probes/: adapters.py  loader.py  v01.json
lmdiff/report/: __init__.py  _pipeline.py  _protocols.py  figures.py  html.py  json_report.py  markdown.py  terminal.py
lmdiff/tasks/: __init__.py  base.py  capability_radar.py  evaluators.py  loglikelihood.py
lmdiff/viz/: __init__.py  _loaders.py  _style.py  change_size.py  cosine.py  direction.py  direction_heatmap.py  domain_bar.py  drift_share.py  family_figures.py  normalization_effect.py  normalized_magnitude.py  pca.py  pca_scatter.py  radar.py  specialization.py
modeldiff/: __init__.py  cli.py  config.py  diff.py  engine.py
modeldiff/metrics/: base.py
modeldiff/metrics/output/: behavioral_distance.py  token_entropy.py  token_kl.py
modeldiff/probes/: adapters.py  v01.json
modeldiff/report/: json_report.py  terminal.py
modeldiff/tasks/: __init__.py  base.py  capability_radar.py  evaluators.py
scripts/: _diff_two_georesults.py  _regenerate_v040_7variant_fixture.py  _regenerate_v041_4variant_fixture.py  _regenerate_v041_7variant_fixture.py  analyze_delta_decomposition.py  analyze_family_geometry.py  analyze_prompt_length_hypothesis.py  diagnose_probe_length_effect.py  discover_lm_eval_tasks.py  inspect_v01_bd.py  plot_family_geometry.py  run_family_geometry_extended.py  run_family_geometry_lm_eval.py  run_family_geometry_partial.py
tests/: conftest.py  test_adapters_lm_eval.py  test_behavioral_distance.py  test_capability_radar.py  test_cli.py  test_cli_e2e.py  test_cli_family_experiment.py  test_config.py  test_degeneracy.py  test_diff.py  test_discover_lm_eval_tasks_script.py  test_engine.py  test_evaluators_f1.py  test_evaluators_gsm8k.py  test_experiments_family.py  test_geometry.py  test_json_report.py  test_loglikelihood.py  test_metrics_output.py  test_probes.py  test_tasks.py  test_tasks_e2e.py  test_tokenizer_utils.py  test_viz_direction_heatmap.py  test_viz_domain_bar.py  test_viz_family_figures.py  test_viz_pca_scatter.py  test_viz_radar.py
tests/fixtures/: __init__.py  calibration_v032_7variant_summary.json  mock_engine.py
tests/integration/: _v040_7variant_spec.py  _v041_4variant_spec.py  _v041_7variant_spec.py  test_calibration_regression.py  test_calibration_regression_7variant.py  test_engine_equivalence.py  test_hf_engine.py
tests/unit/: test_api.py  test_config.py  test_engine.py  test_engine_reuse_integration.py  test_engine_stateless_runtime_params.py  test_findings.py  test_geometry_schema.py  test_html.py  test_json_polish.py  test_lazy_engine_loading.py  test_markdown.py  test_max_context_length.py  test_normalization_formulas.py  test_pipeline.py  test_progress.py  test_release.py  test_report_skeleton.py  test_runtime_compatibility.py  test_schema_migration.py  test_seed_plumbing.py  test_terminal.py  test_v02_compat.py  test_v031_defensive_fixes.py  test_validity.py  test_validity_pipeline.py  test_viz_application.py
