[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmdiff-kit"
version = "0.1.2"
description = "Framework for comparing language model configurations"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "jmq", email = "2271108464@qq.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "numpy",
    "typer",
    "rich",
    "pyyaml",
    "sentencepiece",
    "tiktoken",
    "protobuf",
]

[project.optional-dependencies]
viz = ["matplotlib", "plotly"]
dev = ["pytest", "pytest-cov"]
lm-eval = ["lm-eval>=0.4.0"]

[project.urls]
Repository = "https://github.com/MaiqiVerse/lmdiff"

[project.scripts]
lmdiff = "lmdiff.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests that load real models (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"

[tool.setuptools.packages.find]
include = ["lmdiff*"]
exclude = ["scripts*", "examples*", "tests*"]
